--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <input type="checkbox" id="modeToggle" />
           <span class="slider"></span>
         </label>
-        <span class="toggle-label">Dark Mode</span>
+        <span class="toggle-label">Light Mode</span>
       </div>
 
       <div class="spinner hidden" id="spinner">🔄 Searching...</div>
